--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.2.2 2013-11-28
+ - Don't run carbon-cache with --debug option
+
 0.2.1 2013-11-26
  - Fix deprecation warnings by using @-prefixed variables in templates
  - Fix Modulefile format to enable forge to properly understand dependencies
