--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.2.3 2013-12-17
+ - Run carbon-cache with --debug (so it logs to STDOUT again)
+
 0.2.2 2013-11-28
  - Don't run carbon-cache with --debug option
 
