--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.1 2014-01-03
+- Correct CHANGELOG date for 1.0.0
+- Correct README to say that we support upgrades.
+
 1.0.0 2014-01-03
 - Install (nearly) everything to a Python virtualenv. This will cleanly
   upgrade existing installations, but you may wish to tidy up some old
