--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.0.1 2014-12-15
+- Fix a cyclical permissions change that happens on each run
+
 2.0.0 2014-12-05
 - Ability to specify the user used to run the processes
 - Support installation from a Debian package
