--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2.0.3 2015-03-27
+- Fix `graphite-web` install when using pip and default `root_dir`
+- Restart services when changing package versions
+- Improve acceptance and integration test coverage
+- Remove support for Ruby 1.8.7 and 1.9.2
+
 2.0.2 2014-12-15
 - Lock beaker dependency to ~> 1.17.0 to allow testing on ruby<1.9.3
 
