--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.0.6 2017-07-27
+- Pin `gunicorn` to 19.3.0 so that this continues to work with `pip`
+
 2.0.5 2015-10-06
 - Include pytz dependency
 
