Make the worker processes for graphite-web configurable
This should be useful when hosting graphite on a machine with more
than two cores, as you should be able to utilise more of the available
cores if desired.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Unreleased
 - Switch to using Vox Pupuli for the Python module
+- Make the worker processes for graphite-web configurable.
 
 2.0.6 2017-07-27
 - Pin `gunicorn` to 19.3.0 so that this continues to work with `pip`
