Switch to Vox Pupuli for the Python module
As the current source is listed as deprecated.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Unreleased
+- Switch to using Vox Pupuli for the Python module
+
 2.0.6 2017-07-27
 - Pin `gunicorn` to 19.3.0 so that this continues to work with `pip`
 
